@@ -46,6 +46,10 @@ and strengthen_sig env sg p pos =
   | (Sig_value(id, desc) as sigelt) :: rem ->
       let nextpos = match desc.val_kind with Val_prim _ -> pos | _ -> pos+1 in
       sigelt :: strengthen_sig env rem p nextpos
+  | Sig_type(id, {type_kind=Type_abstract}, rs) ::
+    (Sig_type(id', {type_private=Private}, _) :: _ as rem)
+    when Ident.name id = Ident.name id' ^ "#row" ->
+      strengthen_sig env rem p pos
   | Sig_type(id, decl, rs) :: rem ->
       let newdecl =
         match decl.type_manifest, decl.type_private, decl.type_kind with
